--- a/dot-config/polybar/config
+++ b/dot-config/polybar/config
@@ -33,7 +33,7 @@ width = 100%
 height = 25
 ;offset-x = 1%
 ;offset-y = 1%
-radius = 6.0
+radius = 0.0
 fixed-center = false
 
 background = ${colors.background}
@@ -55,9 +55,9 @@ font-0 = fixed:pixelsize=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 
-modules-left = bspwm i3
-modules-center = mpd 
-modules-right = cpu battery xbacklight temperature date 
+modules-left = i3
+modules-center = mpd xwindow
+modules-right = cpu battery temperature date 
 
 tray-position = right
 tray-padding = 1
@@ -80,7 +80,7 @@ cursor-scroll = ns-resize
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:30:...%
+label = %title:0:50:...%
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -167,10 +167,9 @@ label-urgent-padding = ${module/bspwm.label-urgent-padding}
 ; Separator in between workspaces
 ; label-separator = |
 
-
 [module/mpd]
 type = internal/mpd
-format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
+format-online = <label-song> <icon-prev> <icon-stop> <toggle> <icon-next>
 
 icon-prev = <<
 icon-stop = |
@@ -262,7 +261,7 @@ type = internal/date
 interval = 5
 
 date =
-date-alt = " %Y-%m-%d"
+date-alt = "%Y-%m-%d"
 
 time = %H:%M
 time-alt = %H:%M:%S
@@ -333,6 +332,7 @@ type = internal/battery
 battery = BAT0
 adapter = ADP1
 full-at = 98
+poll-interval = 5
 
 format-charging = <animation-charging> <label-charging>
 format-charging-underline = ${colors.foreground-alt}
