--- a/dot-config/polybar/config
+++ b/dot-config/polybar/config
@@ -56,8 +56,8 @@ font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 
 modules-left = i3
-modules-center = mpd xwindow
-modules-right = cpu battery temperature date 
+modules-center = xwindow
+modules-right = mpd cpu battery temperature date 
 
 tray-position = right
 tray-padding = 1
@@ -169,7 +169,8 @@ label-urgent-padding = ${module/bspwm.label-urgent-padding}
 
 [module/mpd]
 type = internal/mpd
-format-online = <label-song> <icon-prev> <icon-stop> <toggle> <icon-next>
+; format-online = <label-song> <icon-prev> <icon-stop> <toggle> <icon-next>
+format-online = <label-song>
 
 icon-prev = <<
 icon-stop = |
